@@ -1,0 +1,17 @@
+# Test exit status of `log' when $terminal_output=no, $logfile is unset, &
+# logged command fails.
+
+_testing="libprometheus/log"
+_description="status, no terminal + no file, fail"
+_expect=fail
+
+function _check {
+	source "$_lib" || exit 1
+	source "output.bash" || exit 1
+
+	terminal_output=no
+	logfile=
+	setup_logging
+
+	log output "tnlncf status" 1
+}
