@@ -1,0 +1,18 @@
+# Test stderr of `log' when $terminal_output=no, $logfile is unset, & logged
+# command fails.
+
+_testing="libprometheus/log"
+_description="stderr, no terminal + no file, fail"
+_expect=pass
+
+function _check {
+	source "$_lib" || exit 1
+	source "output.bash" || exit 1
+
+	terminal_output=no
+	logfile=
+	setup_logging
+
+	log output "tnlncf stderr" 1 2> output.txt
+	diff "tnlncf_stderr.txt" output.txt
+}
