@@ -1,0 +1,3 @@
+runtest: running logged command output failed
+runtest: full command line follows
+runtest: output tnlncf stderr 1
