@@ -1,4 +1,4 @@
-# Test stderr of `log' when $terminal_output=no, $log=output.log, & logged
+# Test stderr of `log' when $terminal_output=no, $logfile=output.log, & logged
 # command passes.
 
 _testing="libprometheus/log"
